<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- UUID -->
    <RelativeLayout
        android:id="@+id/root_list_item_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_uuid" />

        <TextView
            android:id="@+id/textView_uuid_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="UUID value" />
    </RelativeLayout>



    <!-- MODEL -->
    <RelativeLayout
        android:id="@+id/root_list_item_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/root_list_item_1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_ibeacon_model" />

        <TextView
            android:id="@+id/textView_model_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="IBEACON MODEL VALUE" />
    </RelativeLayout>



    <!-- TEMP NAME -->
    <RelativeLayout
        android:id="@+id/root_list_item_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/root_list_item_2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_temp_name" />

        <TextView
            android:id="@+id/textView_temp_name_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="TEMP NAME VALUE" />
    </RelativeLayout>


    <!-- TEMP NAME -->
    <RelativeLayout
        android:id="@+id/root_list_item_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/root_list_item_3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_temp_link" />

        <TextView
            android:id="@+id/textView_temp_link_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="TEMP LINK VALUE" />
    </RelativeLayout>


    <!-- LOCATION -->
    <RelativeLayout
        android:id="@+id/root_list_item_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/root_list_item_4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_location" />

        <TextView
            android:id="@+id/textView_location_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="LOCATION VALUE" />
    </RelativeLayout>


    <!-- STATUS -->
    <RelativeLayout
        android:id="@+id/root_list_item_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/root_list_item_5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_status" />

        <TextView
            android:id="@+id/textView_status_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="STATUS VALUE" />
    </RelativeLayout>


</RelativeLayout>
