<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F9E79F"
    android:padding="10dp"
    android:layout_margin="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_device_name"
                style="@style/StyleTextLabel" />

            <TextView
                android:id="@+id/device_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="EMPTY NAME"
                android:textStyle="bold"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_mac_address"
                android:paddingTop="10dp"
                style="@style/StyleTextLabel"/>

            <TextView
                android:id="@+id/device_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="EMPTY ADDRESS"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_device_rssi"
                android:paddingTop="10dp"
                style="@style/StyleTextLabel"/>

            <TextView
                android:id="@+id/device_rssi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="EMPTY RSSI"
                android:textStyle="bold" />

        </LinearLayout>


</RelativeLayout>
